# Graph

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: bipartite.hpp  graph.hpp
src/: main.cpp
tests/: CMakeLists.txt  check_end_to_end.py
tests/end-to-end/: 11.ans  2.ans  4.ans  CMakeLists.txt  check_tests.py
tests/end-to-end/tests/: 10.ans  11.ans  13.ans  3.ans  4.ans  5.ans  6.ans  7.ans  8.ans  9.ans
tests/unit/: CMakeLists.txt  tests.cpp
